refactor: Prefer String.formatted over String.format