@@ -51,8 +51,7 @@ public class WkfTaskListener implements TaskListener {
               .all()
               .filter(
                   "self.relatedProcessInstance.name = ?1 and self.name =  ?2 and status = ?3",
-                  String.format(
-                      "%s : %s", wkfTaskConfig.getProcessId(), delegateTask.getProcessInstanceId()),
+                  "%s : %s".formatted(wkfTaskConfig.getProcessId(), delegateTask.getProcessInstanceId()),
                   title,
                   "new")
               .fetchOne();
