@@ -212,11 +212,10 @@ public class ChartRecordViewServiceImpl implements ChartRecordViewService {
     final String tableName = getTableName(studioChart);
     String sqlFilters = Beans.get(FilterSqlService.class).getSqlFilters(filterList, joins, true);
     if (sqlFilters != null) {
-      return String.format(
-          "select self.id from %s self %s where %s",
+      return "select self.id from %s self %s where %s".formatted(
           tableName, String.join("\n", joins), sqlFilters);
     }
-    return String.format("select self.id from %s self %s", tableName, String.join("\n", joins));
+    return "select self.id from %s self %s".formatted(tableName, String.join("\n", joins));
   }
 
   protected List<Filter> getFilters(
