@@ -158,8 +158,7 @@ public class FilterGroovyServiceImpl implements FilterGroovyService {
               .fetchOne();
       if (subJson == null) {
         throw new IllegalStateException(
-            String.format(
-                "No sub field found model: %s field %s ",
+            "No sub field found model: %s field %s ".formatted(
                 jsonField.getTargetJsonModel().getName(), targetName));
       }
       return getJsonFieldType(subJson, targetField);
@@ -168,8 +167,7 @@ public class FilterGroovyServiceImpl implements FilterGroovyService {
       MetaField subMeta = filterSqlService.findMetaField(targetName, jsonField.getTargetModel());
       if (subMeta == null) {
         throw new IllegalStateException(
-            String.format(
-                "No sub field found model: %s field %s ", jsonField.getTargetModel(), targetName));
+            "No sub field found model: %s field %s ".formatted(jsonField.getTargetModel(), targetName));
       }
       return getMetaFieldType(subMeta, targetField, true);
     }
@@ -190,7 +188,7 @@ public class FilterGroovyServiceImpl implements FilterGroovyService {
 
     MetaModel model = metaModelRepo.findByName(field.getTypeName());
     if (model == null) {
-      throw new IllegalStateException(String.format("No model found: %s ", field.getName()));
+      throw new IllegalStateException("No model found: %s ".formatted(field.getName()));
     }
 
     MetaField subMeta = filterSqlService.findMetaField(targetName, model.getFullName());
@@ -203,7 +201,7 @@ public class FilterGroovyServiceImpl implements FilterGroovyService {
       }
     }
     throw new IllegalStateException(
-        String.format("No sub field found field: %s model: %s ", targetName, model.getFullName()));
+        "No sub field found field: %s model: %s ".formatted(targetName, model.getFullName()));
   }
 
   @Override
